<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
        
        <TextView 
        android:id="@+id/tv_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tx_view" />
        
        <TextView 
        android:id="@+id/tv_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tx_long" />
        
        <TextView 
        android:id="@+id/tv_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tx_lat" />
        
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    	
            <EditText
            android:id="@+id/txt_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/str_view_input" />
    	
    		<Button
	        android:id="@+id/btn_save_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:text="@string/str_btn_save_view" />
        </LinearLayout>
        
        <Button
        android:id="@+id/btn_locat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_locat" />
        
        <Button android:id="@+id/btn_auto"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_btn_auto" />
        
        <Button android:id="@+id/btn_manual"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_btn_manual" />
        
    </LinearLayout>
    
    

</RelativeLayout>
